--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 
 body {
     background-color: #EDECEC;
+    overflow-x: hidden;
     color: #000000;
     font-family: 'Open Sans', sans-serif;
     font-size: 16px
@@ -43,19 +44,24 @@ a:hover {
 	margin: 40px auto;
 }
 
-@media (max-width: 750px){
-	.container {
-		width: 600px;
-	}
+@media (max-width: 960px) {
+  /* For a screen < 960px, this CSS will be read */
+  .container {
+    width: 700px;
+  }
 }
-
-
-@media (max-width: 500px){
-	.container {
-		width: 400px;
-	}
+@media (max-width: 720px) {
+  /* For a screen < 720px, this CSS will be read */
+  .container {
+    width: 500px;
+  }
 }
-
+@media (max-width: 540px) {
+  /* For a screen < 540px, this CSS will be read */
+  .container {
+    width: 300px;
+  }
+}
 .card-white{
 	background-color: white;
 	padding: 40px;
@@ -65,10 +71,24 @@ a:hover {
 	text-align: center;
 }
 
+.card-white-left{
+	background-color: white;
+	padding: 40px;
+	box-shadow: 0px 10px 30px rgba(0,0,0,0.1);
+	border-radius: 4px;
+	margin: 20px 0px;
+	text-align: left;
+}
+
 .img-circle{
 	border-radius: 50%
-	width: 200px;
-	height: 200px;
+	width: 150px;
+	height: 150px;
+}
+
+.img-icon{
+	width: 50px;
+	height: 50px;
 }
 
 .btn-blue{
@@ -112,3 +132,51 @@ a:hover {
  #introduction p{
  	margin-bottom: 30px;
  }
+
+/*navigation menu*/
+
+.nav{
+	height: 100%;
+	width: 0;
+	position: fixed;
+	z-index: 1;
+	top: 0;
+	left:0;
+	background-color: black;
+	opacity: 0.9;
+	overflow-x: hidden;
+	padding-top: 60px;
+	transition: 0.7s;
+}
+
+.nav a{
+	display: block;
+	padding: 20px 30px;
+	font-size: 25px;
+	text-decoration: none;
+	color: #ccc;
+}
+
+.nav a:hover{
+	color: #fff;
+	transition: 0.1s;
+}
+
+.nav .close {
+    position: absolute;
+    top: 5px;
+    right: 22px;
+    margin-left: 50px;
+    font-size: 40px;
+}
+
+.slide a{
+	color: #000;
+	font-size: 36px;
+}
+
+#content{
+	padding: 20px;
+	transition: margin-left 0.7s;
+	overflow: hidden;
+}
