--- a/style.css
+++ b/style.css
@@ -77,7 +77,14 @@ a:hover {
 	box-shadow: 0px 10px 30px rgba(0,0,0,0.1);
 	border-radius: 4px;
 	margin: 20px 0px;
+}
+
+.card-white-left p{
 	text-align: left;
+}
+
+.card-white-left h2{
+	text-align: center;
 }
 
 .img-circle{
@@ -87,8 +94,8 @@ a:hover {
 }
 
 .img-icon{
-	width: 50px;
-	height: 50px;
+	width: 100px;
+	height: 100px;
 }
 
 .btn-blue{
@@ -179,4 +186,11 @@ a:hover {
 	padding: 20px;
 	transition: margin-left 0.7s;
 	overflow: hidden;
+}
+
+.list-flex{
+	display:flex;
+	justify-content: space-between;
+	align-items: center;
+	list-style: none;
 }
